# SocialVibeRustApp

./: .replit  COMPREHENSIVE_EMOTION_TEST_REPORT.md  CSV_FALLBACK_EVIDENCE_REPORT.md  Cargo.toml  PDF_CONVERSION_INSTRUCTIONS.md  README.md  SOCIAL_PULSE_ARCHITECTURE_DOCUMENTATION.md  Social_Pulse_Architecture_Documentation.html  TOXICITY_COMBO_SYSTEM_TEST_REPORT.md  convert-to-html.js  convert-to-pdf.js  csv_fallback_evidence_demo.rs  package-lock.json  package.json  posts_backup.csv  pyproject.toml  replit.md  schema.sql  users_backup.csv
attached_assets/: Pasted--nltk-data-Downloading-package-stopwords-to-home-runner-nltk-data-2025-09-19T20-38-07-554918Z-1758314369469_1758314369470.txt  Pasted-import-sys-from-nrclex-import-NRCLex-from-typing-import-Dict-from-emotionclassifier-import-Emotio-1758133665829_1758133665830.txt
display_Screenshots/: README.md  screenshot_capture_script.md
docs/: AI_Integration_Guide.md  GenAI_Adoption_Guide.md  Migration_Postgres_to_CosmosDB.md  Presentation_Social_Pulse.md
python_scripts/: ai_config.py  async_server.py  comprehensive_emotion_test.py  content_moderation.py  content_moderator.py  custom_sentiment_analysis.py  emotion_test_report_20250918_031544.json  emotion_test_report_20250918_031753.json  emotion_test_suite.py  enhanced_sentiment_analysis.py  ml_sentiment_service.py  model_cache.py  sentiment_analysis.py  sentiment_analyzer.py  test_toxicity_combo.py
scripts/: comprehensive_seed.js  create_moderation_posts.js  populate_comments.js  populate_data.js  targeted_content_creation.js
src/: config.rs  error.rs  lib.rs  main.rs
src/auth/: jwt.rs  middleware.rs  mod.rs
src/db/: cosmos.rs  mod.rs  postgres.rs  repository.rs
src/models/: comment.rs  mod.rs  post.rs  sentiment.rs  user.rs  vote.rs
src/routes/: api.rs  auth.rs  comments.rs  mod.rs  posts.rs  users.rs  vote_routes.rs  web.rs
src/services/: comment_service.rs  mod.rs  moderation_service.rs  (+5 more)
static/: app-v2.js  app.js  index.html  styles.css
tests/: csv_fallback_integration_test.rs
(+2 files in other folders)
